[gd_scene load_steps=8 format=3 uid="uid://b4i8gaa812i43"]

[ext_resource type="Script" uid="uid://cfbos3jrtyhg2" path="res://addons/weekend Dialogue/Scripts/weekendDialogueEditor.gd" id="1_hfyfc"]
[ext_resource type="PackedScene" uid="uid://cufx4633uoge0" path="res://addons/weekend Dialogue/Prefabs/dialogue_node.tscn" id="2_5u2jf"]
[ext_resource type="Resource" uid="uid://duo0jic738cwv" path="res://Data/Dialogue/Test Dialogue.tres" id="3_nympv"]
[ext_resource type="PackedScene" uid="uid://degb4wkppnlpv" path="res://addons/weekend Dialogue/Prefabs/start_node.tscn" id="5_5axue"]
[ext_resource type="Script" uid="uid://cqb8dqy20rc33" path="res://addons/weekend Dialogue/Scripts/TextEditorDialogueNode.gd" id="6_ngmty"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkana"]
bg_color = Color(0.0920593, 0.0233568, 0.0649891, 1)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdwvp"]
bg_color = Color(0.386777, 0.113947, 0.146998, 1)

[node name="DialogueGraph" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hfyfc")
dialogueNodePrefab = ExtResource("2_5u2jf")
dialogueStartNodePrefab = ExtResource("5_5axue")
dialogue_data = ExtResource("3_nympv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 33.66)
layout_mode = 2

[node name="Add Node" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(153.03, 0)
layout_mode = 2
text = "Add Node +"

[node name="Add Start Node" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(153.03, 0)
layout_mode = 2
text = "Add Start Node +"

[node name="Save Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(153.03, 0)
layout_mode = 2
text = "Save"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(197.45, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/HBoxContainer2/Panel/VBoxContainer"]

[node name="Dialogue Editor" type="GraphEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Text Editor" type="GraphNode" parent="VBoxContainer/HBoxContainer2/Dialogue Editor"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 429.0
offset_top = 144.0
offset_right = 815.0
offset_bottom = 432.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xkana")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_pdwvp")
position_offset = Vector2(429, 144)
resizable = true
draggable = false
selectable = false
title = "Text Editor"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("6_ngmty")

[node name="Editor Group" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120.68)
layout_mode = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "This is sample text"
deselect_on_focus_loss_enabled = false
wrap_mode = 1

[node name="Edit Buttons 1" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group"]
custom_minimum_size = Vector2(0, 22.69)
layout_mode = 2

[node name="Bold Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1"]
layout_mode = 2
text = "B"

[node name="Italic Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1"]
layout_mode = 2
text = "I"

[node name="Underline Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1"]
layout_mode = 2
text = "u"

[node name="Wave Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1"]
layout_mode = 2
text = "wave"

[node name="Shake Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1"]
layout_mode = 2
text = "shake"

[node name="Tornado Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1"]
layout_mode = 2
text = "tornado"

[node name="Edit Buttons 2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group"]
custom_minimum_size = Vector2(0, 22.69)
layout_mode = 2

[node name="Fade Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 2"]
layout_mode = 2
text = "fade"

[node name="Raindow Button" type="Button" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 2"]
layout_mode = 2
text = "rainbow"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 2"]
layout_mode = 2
text = "co"
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="PopupMenu" type="PopupMenu" parent="."]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Add Node" to="." method="_on_add_node_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Add Start Node" to="." method="_on_add_start_node_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save Button" to="." method="_on_save_pressed"]
[connection signal="connection_request" from="VBoxContainer/HBoxContainer2/Dialogue Editor" to="." method="_on_dialogue_editor_connection_request"]
[connection signal="delete_nodes_request" from="VBoxContainer/HBoxContainer2/Dialogue Editor" to="." method="_on_dialogue_editor_delete_nodes_request"]
[connection signal="disconnection_request" from="VBoxContainer/HBoxContainer2/Dialogue Editor" to="." method="_on_dialogue_editor_disconnection_request"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1/Bold Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_bold_button_press"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1/Italic Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_italic_button_press"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1/Underline Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_underline_button_press"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1/Wave Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_wave_button_press"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1/Shake Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_shake_button_press"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 1/Tornado Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_tornado_button_press"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 2/Fade Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_fade_button_press"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor/Editor Group/Edit Buttons 2/Raindow Button" to="VBoxContainer/HBoxContainer2/Dialogue Editor/Text Editor" method="_on_rainbow_button_press"]
